@@ -1,3 +1,12 @@
+10/17/18
+- added java installation
+- fixed docker image name
+- added clara and coatjava installation and their tag
+- added reconstruction env variables
+
+10/10/18
+- better documentation
+
 10/2/2018
 - basing dockerfile on gemcbatch docker
 - improved environment
